fix red theme color for mobile

--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -17,6 +17,6 @@
   "display": "standalone",
   "scope": "/",
   "description": "BirthStoneApp.",
-  "theme_color": "red",
-  "background_color": "red"
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff"
 }
